fix(user-profile):  fixed date to not overflow

--- a/src/app/shared/components/education-history/education-history.component.scss
+++ b/src/app/shared/components/education-history/education-history.component.scss
@@ -2,4 +2,16 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  flex-grow: 1;
+}
+
+.min-w-0 {
+  min-width: 0;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+.spacer {
+  width: 16px;
 }
